--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <html>
     <head>
         <title>Sam's test website</title>
-
         <!-- Put other stuff here -->
+         <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CN628B68WN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CN628B68WN');
+</script>
     </head>
     <body>
 
