--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TP2S3X8K"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
-      <!-- Calendly badge widget begin -->
+     <!-- Calendly badge widget begin -->
 <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
 <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-<script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/style-ai/test-ga', text: 'Schedule time with me', color: '#0069ff', textColor: '#ffffff', branding: undefined }); }</script>
+<script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/sam-usestyle/adwin-30min', text: 'Let\'s get litty', color: '#8400ff', textColor: '#cfc54a', branding: undefined }); }</script>
 <!-- Calendly badge widget end -->
     </body>
 </html>
